[package]
name = "tokio-console-exporter"
version = "0.3.0"
edition = "2021"
authors = ["Tommy Verrall"]
description = "Prometheus exporter for Tokio Console metrics with enhanced task location tracking"
license = "MIT"
keywords = ["tokio", "console", "prometheus", "exporter", "monitoring", "metrics"]
categories = ["monitoring", "asynchronous"]

[workspace]

[profile.release]
# Preserve debug symbols for task location information
debug = true
# Optimize for performance
opt-level = 3
# Strip debug symbols but keep line tables for backtraces
strip = "debuginfo"
# Enable link-time optimization for better performance
lto = true
# Use panic = "abort" for smaller binaries
panic = "abort"

[dependencies]
# Tokio Console API - latest version
console-api = "0.8.1"
console-subscriber = "0.4.1"

# Async runtime and networking
tokio = { version = "1.36.0", features = ["rt-multi-thread", "time", "macros", "signal", "net"] }
tonic = "0.12.3"
futures = "0.3.30"
futures-util = "0.3.30"

# Serialization
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# CLI argument parsing
clap = { version = "4.5.0", features = ["derive"] }

# Prometheus metrics
prometheus = { version = "0.14.0", features = ["process"] }

# HTTP server
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["server"] }

# Error handling
thiserror = "1.0.57"
anyhow = "1.0.80"

# Additional utilities
dashmap = "5.5.3"
parking_lot = "0.12.1" 
bytes = "1.10.1"
http-body-util = "0.1.3"
